--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   device_preview: ^1.2.0
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
+  google_sign_in: ^6.3.0
+
 
 dev_dependencies:
   flutter_test:
