--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
   google_sign_in: ^6.3.0
+  intl:
+  flutter_slidable: ^4.0.0
 
 
 dev_dependencies:
